# MethylSomaticAnalysis

./: .gitignore  CMakeLists.txt  README.md  architecture.md  test_develop_branch.txt  test_mcp_permissions.txt
images/: architecture_diagram.md  program_flowchart.md
include/msa/: Types.h
include/msa/core/: BAMValidator.h  BamFetcher.h  ConfigParser.h  MethylHaploExtractor.h  ReportExporter.h  SomaticMethylationAnalyzer.h  VariantLoader.h
include/msa/utils/: LogManager.h  MemoryPool.h
scripts/: filter_PASS_vcf.sh  filter_vcf.sh  run_clairs.sh  run_longphase_somatic_benchmark.sh
src/: main.cpp
src/msa/core/: BAMValidator.cpp  BamFetcher.cpp  ConfigParser.cpp  MethylHaploExtractor.cpp  ReportExporter.cpp  SomaticMethylationAnalyzer.cpp  VariantLoader.cpp
src/msa/utils/: LogManager.cpp  MemoryPool.cpp
tools/: haplotype_tag_stats.py  threshold_filter_analysis.py  threshold_grid_analysis.py  tp_fp_analysis.py  tp_fp_full_analysis.py
